SERVER-8628 Check the index option of collMod for unrecognized fields